# abs-metadata-podium

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build-release.yaml  run-tests.yaml
.rpm/: abs-metadata-podium.conf.example  abs-metadata-podium.service  abs-metadata-podium.spec  build-rpm.sh
src/abs_metadata_podium/: __main__.py  app.py  cli.py  config.py  models.py  podium.py
tests/: test_app.py  test_models.py  test_podium.py
tests/fixtures/: detail_he_who_fights_with_monsters_5.html  detail_shadow_of_mars.html  search_he_who_fights_with_monsters_5.html  search_shadow_of_mars.html
