[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abs-metadata-podium"
version = "0.1.0"
description = "Audiobookshelf custom metadata provider for Podium Entertainment"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Lars Kiesow", email = "lars.kiesow@uni-osnabrueck.de" }]
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
abs-metadata-podium = "abs_metadata_podium.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/abs_metadata_podium"]
